# vector-db-playground

./: .gitignore  README.md  main.py  pyproject.toml  qdrant_with_embedding_data.py
