[project]
name = "vector-db-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.31.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
]
